http://www.nsnam.org including tutorials: http://www.nsnam.org/tutorials.html

Consult the file CHANGES.html for more detailed information about changed
API and behavior across ns-3 releases.

Release 3-dev
=============

Availability
------------
This release is not yet available.

Supported platforms
-------------------

New user-visible features
-------------------------

- Enable selection of high precision int64x64_t implementation
  at configure time, for debugging purposes.
- A new LTE MAC downlink scheduling algorithm named Channel and QoS
  Aware (CQA) Scheduler is provided by the new
  ``ns3::CqaFfMacScheduler`` object.
- SixLowPan model can now use uncompressed IPv6 headers. An option to
  define the minimum compressed packet size has been added. 
- FlowMonitor "SerializeToXml" functions are now directly available 
  from the Helper.
- Ipv6Extension::m_dropTrace has been removed. Ipv6L3Protocol::m_dropTrace 
  is now fired when appropriate.
- FlowMonitor does not track anymore multicast/broadcast packets, reflecting
  its original design.

Bugs fixed
----------
- Bug 1294 - New PeekU8 () and Read (Buffer::Iterator start, uint32_t size) methods in Buffer::Iterator
- Bug 1653 - Extension of CommandLine interface: restored operator << (CommandLine)
- Bug 1739 - The endpoint is not deallocated for UDP sockets
- Bug 1786 - os << int64x64_t prints un-normalized fractional values
- Bug 1787 - Runtime error when using AnimationInterface::EnablePacketMetadata() to fetch metadata of CSMA packet
- Bug 1792 - Parameter logger constructor
- Bug 1808 - FlowMon relies on IPv4's Identification field to trace packets
- Bug 1821 - Setting an interface to Down state will cause various asserts in IPv6
- Bug 1837 - AODV crashes when using multiple interfaces
- Bug 1838 - FlowMonitorHelper must not be copied.
- Bug 1841 - FlowMonitor fails to install if IPv4 is not installed in the node
- Bug 1842 - FlowMonitor SerializeToXml<Something> should be called by the helper